<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:background="@drawable/background_button_white_30"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_14sdp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/do_you_want_to_exit_app"
            android:textAlignment="center"
            android:textColor="@color/color_202020"
            android:textFontWeight="800"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/_14sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/background_button_gray_30"
                android:fontFamily="@font/product_sans_regular"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="@color/color_677892"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/background_button_gradient_30"
                android:fontFamily="@font/product_sans_regular"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
