<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:foreground="?actionBarItemBackground"
                android:padding="@dimen/_14sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/what_problems_do_you_encounter_during_use_this_app"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivBack" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintBottom_toTopOf="@+id/tvUninstall"
                app:layout_constraintTop_toBottomOf="@+id/tvContent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:background="@drawable/background_button_gray_10"
                        android:foreground="?actionBarItemBackground"
                        android:paddingVertical="@dimen/_10sdp"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvContent1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:ellipsize="end"
                            android:fontFamily="@font/product_sans_regular"
                            android:maxLines="2"
                            android:text="@string/volume_booster_function_not_working"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/btnRestart"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/btnRestart"
                            android:layout_width="@dimen/_70sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:background="@drawable/background_button_white_5"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/cbCheckCurrent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/restart"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp"
                            app:fontFamily="@font/product_sans_regular"
                            app:layout_constraintBottom_toBottomOf="@+id/btnRestart"
                            app:layout_constraintEnd_toEndOf="@+id/btnRestart"
                            app:layout_constraintStart_toStartOf="@+id/btnRestart"
                            app:layout_constraintTop_toTopOf="@+id/btnRestart" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:background="@drawable/background_button_gray_10"
                        android:foreground="?actionBarItemBackground"
                        android:paddingVertical="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@+id/cv1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:ellipsize="end"
                            android:fontFamily="@font/product_sans_regular"
                            android:maxLines="2"
                            android:text="@string/nothing_interesting_anymore"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/btnExplore"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/btnExplore"
                            android:layout_width="@dimen/_70sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:background="@drawable/background_button_white_5"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/cbCheckCurrent2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/explore"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_11ssp"
                            app:fontFamily="@font/product_sans_regular"
                            app:layout_constraintBottom_toBottomOf="@+id/btnExplore"
                            app:layout_constraintEnd_toEndOf="@+id/btnExplore"
                            app:layout_constraintStart_toStartOf="@+id/btnExplore"
                            app:layout_constraintTop_toTopOf="@+id/btnExplore" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <TextView
                android:id="@+id/tvUninstall"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/background_button_white_10"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/dont_uninstall_yet"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/product_sans_regular"
                app:layout_constraintBottom_toTopOf="@+id/tvCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/background_button_gray_10"
                android:gravity="center"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/still_want_to_uninstall"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:fontFamily="@font/product_sans_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#52494949"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_gravity="center" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>